# Bot-apostas

./: .env  .gitignore  Makefile  README.md  app.py  app.pyi  config.py  pyproject.toml  requirements.txt  teste.py
score_bing/: api.py  message.py  statistics.py  team.py  utils.py
src/: api.py  apiController.py  message.py  statistics.py  team.py
